updated conversion gateway

--- a/package.json
+++ b/package.json
@@ -4,20 +4,80 @@
   "description": "",
   "main": "app/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec npm run start --watch app --ext 'ts' | pino-pretty --colorize",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node -r dotenv/config app/index.ts --files"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.14.9",
+    "@hapi/code": "9.0.3",
+    "@hapi/lab": "25.2.0",
+    "@microsoft/microsoft-graph-types": "2.40.0",
+    "@tsconfig/node18": "18.2.4",
+    "@types/amqplib": "^0.10.5",
+    "@types/isomorphic-fetch": "0.0.39",
+    "@types/jsdom": "21.1.7",
+    "@types/mailparser": "3.4.4",
+    "@types/mime-types": "2.1.4",
+    "@types/node": "20.12.13",
+    "@types/node-fetch": "^2.6.11",
+    "@types/nodemailer": "6.4.15",
+    "@types/readable-stream": "4.0.14",
+    "@types/simple-xml": "^0.10.2",
+    "@types/sinon": "17.0.3",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/uuid": "9.0.8",
     "@types/ws": "^8.5.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
+    "@types/xml2js": "^0.4.14",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-promise": "6.2.0",
+    "nodemon": "^3.1.2",
+    "pino-pretty": "11.1.0",
+    "prettier": "3.2.5",
+    "sinon": "18.0.0",
+    "standard": "17.1.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.587.0",
+    "@aws-sdk/s3-request-presigner": "3.587.0",
+    "@azure/identity": "4.2.0",
+    "@hapi/hapi": "21.3.9",
+    "@kenjiuno/decompressrtf": "0.1.4",
+    "@microsoft/microsoft-graph-client": "3.0.7",
+    "@sentry/node": "7.114.0",
+    "@sentry/tracing": "7.114.0",
     "@stomp/stompjs": "^7.0.0",
-    "stompjs": "^2.3.3",
+    "@types/archiver": "6.0.2",
+    "amqplib": "^0.10.4",
+    "archiver": "7.0.1",
+    "axios": "1.7.2",
+    "big-integer": "1.6.52",
+    "cfb": "1.2.2",
+    "date-fns": "3.6.0",
+    "date-fns-tz": "3.1.3",
+    "dotenv": "16.4.5",
+    "form-data": "4.0.0",
+    "isomorphic-fetch": "3.0.0",
+    "jsdom": "24.1.0",
+    "mailparser": "3.7.1",
+    "mime-types": "2.1.35",
+    "pino": "9.1.0",
+    "rtf-stream-parser": "3.8.0",
+    "serialize-error": "^11.0.3",
+    "sockjs-client": "^1.6.1",
+    "uuid": "9.0.1",
     "ws": "^8.17.1"
   }
 }
