--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/jsdom": "21.1.7",
     "@types/mailparser": "3.4.4",
     "@types/mime-types": "2.1.4",
-    "@types/node": "20.12.13",
+    "@types/node": "^20.14.9",
     "@types/node-fetch": "^2.6.11",
     "@types/nodemailer": "6.4.15",
     "@types/readable-stream": "4.0.14",
@@ -47,7 +47,7 @@
     "sinon": "18.0.0",
     "standard": "17.1.0",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5"
+    "typescript": "^5.5.2"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.587.0",
@@ -77,6 +77,7 @@
     "rtf-stream-parser": "3.8.0",
     "serialize-error": "^11.0.3",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "uuid": "9.0.1",
     "ws": "^8.17.1"
   }
