--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
   "include": [
     "app/**/*"
   ],
   "exclude": ["node_modules"],
   "compilerOptions": {
-    "outDir": "dist/",
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "lib": ["ES2021", "DOM"] // add this line
+    "target": "ES2021",
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "strict": true
   }
 }
